[project]
name = "marimo-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "marimo>=0.20.4",
    "ruff>=0.15.4",
]
